[package]
name = "big_lehmer"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Leitner <leitner.andi@googlemail.com>"]
description = "Framework to encode and decode large lehmer codes"
repository = "https://github.com/Hengoo/big_lehmer"
readme = "readme.md"
categories = [ "compression", "mathematics" ]
keywords = [ "lehmer", "math", "compression", "permutations" ]
exclude = [
    ".vscode/*",
    ".github/*",
]

[dependencies]
dashu = "0.4.2"
rayon = "1.10.0"

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
